<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hintergrund_historie"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="80dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="80dp">

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnProfil"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/profil"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnHistorie"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/historie"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSocial"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/social"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ueberschrift"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/buchungshistorie"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStart" />

        <EditText
            android:id="@+id/editText_fahrt_suchen"
            android:layout_width="364dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/suchen"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ueberschrift" />

        <TextView
            android:id="@+id/fahrt1"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/datum1"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_fahrt_suchen" />

        <ImageView
            android:id="@+id/karte_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nach1"
            app:srcCompat="@drawable/skizze_google_maps_1" />

        <TextView
            android:id="@+id/uhrzeit1"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/uhrzeit1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fahrt1" />

        <TextView
            android:id="@+id/von1"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/von1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uhrzeit1" />

        <TextView
            android:id="@+id/nach1"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nach1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/von1" />

        <TextView
            android:id="@+id/fahrt2"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/datum2"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/karte_1" />

        <ImageView
            android:id="@+id/karte_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nach2"
            app:srcCompat="@drawable/skizze_google_maps_2" />

        <TextView
            android:id="@+id/uhrzeit2"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/uhrzeit2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fahrt2" />

        <TextView
            android:id="@+id/von2"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/von2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/uhrzeit2" />

        <TextView
            android:id="@+id/nach2"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/nach2"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/von2" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>