<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp"
    android:background="@drawable/hintergrund_start">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnProfil"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/profil"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHistorie"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/historie"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSocial"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/social"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/begruessung"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <TextView
        android:id="@+id/veranstaltungsvorschlag_1"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/folgende_veranstaltungen_finden"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/begruessung" />

    <TextView
        android:id="@+id/veranstaltungsvorschlag_2"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/heute_in_deiner_n_he_statt_"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_1" />

    <ImageView
        android:id="@+id/vorschlag_fussball"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2"
        app:srcCompat="@drawable/png_fussball" />

    <TextView
        android:id="@+id/vorschlag_fussball_text"
        android:layout_width="400dp"
        android:layout_height="29dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="180dp"
        android:text="@string/fußball"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_1"/>


    <ImageView
        android:id="@+id/vorschlag_musik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2"
        app:srcCompat="@drawable/png_musik" />

    <TextView
        android:id="@+id/vorschlag_konzerte_text"
        android:layout_width="400dp"
        android:layout_height="29dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="180dp"
        android:text="@string/konzerte"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_1"/>

    <ImageView
        android:id="@+id/vorschlag_kino"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2"
        app:srcCompat="@drawable/png_kino" />

    <TextView
        android:id="@+id/vorschlag_kino_text"
        android:layout_width="400dp"
        android:layout_height="29dp"
        android:layout_marginLeft="225dp"
        android:layout_marginTop="180dp"
        android:text="@string/kino"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_1"/>

    <ImageView
        android:id="@+id/vorschlag_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2"
        app:srcCompat="@drawable/png_facebook" />

    <TextView
        android:id="@+id/vorschlag_facebook_text"
        android:layout_width="400dp"
        android:layout_height="29dp"
        android:layout_marginLeft="285dp"
        android:layout_marginTop="180dp"
        android:text="@string/einladungen"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_1"/>


    <EditText
        android:id="@+id/editTextfahrt_buchen_von"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/von"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2" />

    <EditText
        android:id="@+id/editTextfahrt_buchen_nach"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/edittextstyle"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nach"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2" />

    <Button
        android:id="@+id/fahrt_buchen"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/editstylebutton"
        android:ems="10"
        android:gravity="center"
        android:text="@string/fahrt_buchen"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veranstaltungsvorschlag_2" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
